[package]
name = "mqtt-proto"
version = "0.2.0"
license = "MIT"
description = "MQTT v3.1/v3.1.1/v5.0 protocol sync/async codec."
authors = ["LinFeng <thewawar@gmail.com>"]
repository = "https://github.com/akasamq/mqtt-proto"
readme = "README.md"
keywords = ["mqtt", "codec", "network", "async"]
categories = ["network-programming", "asynchronous"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
bytes = "1.3.0"
futures-lite = "1.12.0"
tokio = { version = "1.23.0", features = ["io-util"] }
thiserror = "1.0.38"
simdutf8 = "0.1.4"

# Only for fuzz testing
arbitrary = { version = "1.2.3", optional = true, features = ["derive"] }

[dev-dependencies]
proptest = "1.0.0"
tokio = { version = "1.23.0", features = ["full"] }

[[bench]]
name = "codec"
