[package]
name = "mqtt-proto"
version = "0.3.0"
license = "MIT"
description = "MQTT v3.1/v3.1.1/v5.0 protocol sync/async codec."
authors = ["LinFeng <thewawar@gmail.com>"]
repository = "https://github.com/akasamq/mqtt-proto"
readme = "README.md"
keywords = ["mqtt", "codec", "network", "async"]
categories = ["network-programming", "asynchronous"]
edition = "2021"

[dependencies]
bytes = { version = "1", default-features = false }
embassy-futures = { version = "0.1", default-features = false, optional = true }
embedded-io = { version = "0.6", default-features = false, features = ["alloc"], optional = true }
embedded-io-adapters = { version = "0.6", default-features = false, optional = true }
embedded-io-async = { version = "0.6", default-features = false, features = ["alloc"], optional = true }
futures-lite = { version = "2", default-features = false }
simdutf8 = { version = "0.1", default-features = false }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false, features = ["io-util"], optional = true }

# Only for fuzz testing
arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
dhat = "0.3"
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

[[bench]]
name = "codec"

[features]
default = ["std", "tokio"]
std = ["embedded-io-adapters?/std", "bytes/std", "futures-lite/std", "simdutf8/std", "thiserror/std"]

# Enable DHAT Memory debugging
dhat-heap = ["std"]

# Enable `embedded-hal` I/O features
embedded-io = ["dep:embedded-io", "dep:embedded-io-adapters", "dep:embedded-io-async"]

# Enable `tokio` async runtime
tokio = ["dep:tokio", "embedded-io-adapters?/tokio-1"]

# Enable `embassy` async runtime
embassy = ["dep:embassy-futures"]
