[package]
name = "mqtt-proto"
version = "0.3.0"
license = "MIT"
description = "MQTT v3.1/v3.1.1/v5.0 protocol sync/async codec."
authors = ["LinFeng <thewawar@gmail.com>"]
repository = "https://github.com/akasamq/mqtt-proto"
readme = "README.md"
keywords = ["mqtt", "codec", "network", "async"]
categories = ["network-programming", "asynchronous"]
edition = "2021"

[dependencies]
bytes = { version = "1", default-features = false }
embassy-futures = { version = "0.1", default-features = false }
embedded-io = { version = "0.6", default-features = false, features = ["alloc"] }
embedded-io-adapters = { version = "0.6", default-features = false, optional = true }
embedded-io-async = { version = "0.6", default-features = false, features = ["alloc"] }
futures-lite = { version = "2", default-features = false }
simdutf8 = { version = "0.1", default-features = false }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false, features = ["io-util"], optional = true }

# Only for fuzz testing
arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.7"
dhat = "0.3"
embedded-io-adapters = { version = "0.6", features = ["tokio-1"] }
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

[[bench]]
name = "codec"
harness = false

[features]
default = ["std"]
std = [
    "bytes/std",
    "embedded-io/std",
    "embedded-io-adapters?/std",
    "embedded-io-async/std",
    "futures-lite/std",
    "simdutf8/std",
    "thiserror/std"
]

# Enable `tokio` async runtime
tokio = ["dep:embedded-io-adapters", "dep:tokio", "embedded-io-adapters?/tokio-1", "std"]

# Enable DHAT Memory debugging
dhat-heap = ["std"]
